[project]
name = "wagtail-content-audit"
dynamic = ["version"]
description = "Tools for performing content audits of Wagtail sites"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "CC0"}
authors = [
    {name = "CFPB", email = "tech@cfpb.gov" }
]
dependencies = [
    "django>=5.2",
    "wagtail>=6.3",
    "queryish",
]
classifiers = [
    "Framework :: Django",
    "Framework :: Django :: 5.2",
    "Framework :: Wagtail",
    "Framework :: Wagtail :: 6",
    "Framework :: Wagtail :: 7",
    "License :: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication",
    "License :: Public Domain",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.optional-dependencies]
testing = [
    "coverage[toml]",
]

[project.urls]
"Homepage" = "https://github.com/cfpb/wagtail-content-audit"
"Bug Reports" = "https://github.com/cfpb/wagtail-content-audit/issues"
"Source" = "https://github.com/cfpb/wagtail-content-audit"

[build-system]
requires = ["setuptools>=64", "setuptools_scm[toml]>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[tool.setuptools.package-data]
wagtail_content_audit= [
    "templates/wagtail_content_audit/*",
]

[tool.ruff]
# Use PEP8 line-length
line-length = 79
# Exclude common paths
exclude = [
    ".git",
    ".tox",
    "__pycache__",
    "**/migrations/*.py",
]

[tool.ruff.lint]
ignore = ["E731", ]
# Select specific rulesets to use
select = [
    # pycodestyle
    "E",
    # pyflakes
    "F",
    # flake8-bugbear
    "B",
    # pyupgrade
    "UP",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]

[tool.ruff.lint.isort.sections]
"django" = ["django"]
"wagtail" = ["wagtail"]

[tool.ruff.lint.isort]
lines-after-imports = 2
known-third-party = ["jinja2"]
section-order = [
    "future",
    "standard-library",
    "django",
    "wagtail",
    "third-party",
    "first-party",
    "local-folder",
]

[tool.bandit]
exclude_dirs = [
    "*/tests/*",
]

[tool.coverage.run]
omit = [
    "wagtail_content_audit/tests/*",
]
